# meter

./: Cargo.toml  LICENSE  README.md  TODO
scripts/: bundle-menubar.sh
src/: cli.rs  db.rs  invoice.rs  main.rs  menubar.rs  models.rs  notification.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/views/: clients.rs  entries.rs  invoice.rs  mod.rs  pomodoro.rs  projects.rs  settings.rs  timer.rs
